# WizData

./: .dockerignore  .env.docker  .replit  B2B_PLATFORM_STATUS.md  DATA_SOURCES_STATUS.md  Dockerfile  INFRASTRUCTURE_STATUS.md  LIVE_DATA_VERIFICATION.md  README.md  README_B2B_DATASET_REGISTRY.md  README_DOCKER.md  README_MICROSERVICES.md  SCRAPER_STATUS.md  api_key_test_report_20250730_132300.md  app.py  app_enhanced.py  config.py  data_export_example.py  demo_integration_examples.py  demo_live_data.py  docker-compose.test.yml  docker-compose.yml  env.sh  esg_data_export_example.py  global_data_export_example.py  main.py  models.py  pyproject.toml  replit.md  request_api_keys.py  requirements.txt  routes.py  seed_esg_data.py  simple_app.py  test_all_apis.py  test_api.py  test_api_key_integration.py  test_b2b_platform.py  test_charting_api.py  test_comprehensive_data_sources.py  (+4 more)
api/: api_documentation.py  auth_admin.py  charting.py  data_access_api.py  data_services.py  dataset_api.py  market_data_enhanced.py  websocket.py
attached_assets/: Pasted--Now-that-WizData-will-be-a-data-vendor-you-ve-unlocked-a-whole-new-business-vertical-selling-raw--1743688998054.txt  Pasted-DATA-SOURCING-STRATEGY-1-JSE-Johannesburg-Stock-Exchange-Data-Type-Source-Options-OHLCV-listi-1753879480457_1753879480457.txt  Pasted-Modular-Microservices-Architecture-What-Break-your-monolith-into-distinct-services-data-ingesti-1753877022305_1753877022306.txt  Pasted-Modular-Scraper-Architecture-per-source-microservices-Structure-your-scrapers-as-independent-servi-1753877458679_1753877458680.txt  Pasted-Page-WizData-Dashboard-Grid-System-12-column-grid-max-width-1440px-Gutters-24px-Margins-3-1753881596451_1753881596452.txt  Pasted-To-mine-and-source-financial-data-to-build-your-own-APIs-for-TradingWealthWiz-you-ll-need-to-build--1743688330598.txt  Pasted-To-pick-your-niche-we-want-a-vertical-that-Has-data-scarcity-hard-to-find-messy-or-unstructure-1743694512685.txt  (+1 more)
auth/: api_key_manager.py
(+223 files in other folders)
