[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.16",
    "aioschedule>=0.5.2",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.13.3",
    "email-validator>=2.2.0",
    "fastapi>=0.115.12",
    "flask-socketio>=5.5.1",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gevent-websocket>=0.10.1",
    "gunicorn>=23.0.0",
    "numpy>=2.2.4",
    "openai>=1.70.0",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "shapely>=2.1.0",
    "sqlalchemy>=2.0.40",
    "trafilatura>=2.0.0",
    "uvicorn>=0.34.0",
    "flask-limiter>=3.12",
    "prometheus-client>=0.22.1",
    "structlog>=25.4.0",
    "werkzeug>=3.1.3",
    "celery>=5.5.3",
    "kafka-python>=2.2.15",
    "selenium>=4.34.2",
    "requests-html>=0.10.0",
    "fake-useragent>=2.2.0",
    "python-dateutil>=2.9.0.post0",
    "playwright>=1.54.0",
    "scrapy>=2.13.3",
    "quart>=0.20.0",
    "quart-cors>=0.8.0",
    "flask-dance>=7.1.0",
    "flask-login>=0.6.3",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
]
